696-fix: Speakers wanted layout issue (#697)
* fix: 696 - layout issue

* fix: 696 - layout issue

--- a/src/widgets/speakers/ui/speakers.module.scss
+++ b/src/widgets/speakers/ui/speakers.module.scss
@@ -1,7 +1,6 @@
 .speakers {
   display: flex;
   gap: 50px;
-  justify-content: space-between;
   background-color: $color-gray-100;
 
   .info {
@@ -35,10 +34,12 @@
   .picture {
     width: 294px;
     height: 300px;
+    margin-left: auto;
 
     @include media-laptop {
       width: 235px;
       height: 240px;
+      margin-left: unset;
       padding: 16px 0 0 0;
     }
   }
